<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kisan Suvidha</string>
    <string name="prompt_email">xyz@gmail.com</string>
    <string name="prompt_password">******</string>
    <string name="register_here">Sign Up</string>
    <string name="register_text">Fill the details &amp; create your account</string>
    <string name="displayName">John Doe</string>
    <string name="login_here">Login</string>
    <string name="forgot_password">Enter email address associate with your account</string>
    <string name="tryanother">Try a different email</string>
    <string name="available_crops">Apple, Blueberry, Cherry, Corn, Grape, Orange, Peach, Pepper, Potato, Tomato, Raspberry, and Strawberry</string>
    <string name="apple_scab"><b>Choose scab-resistant</b> varieties of apple or crabapple trees.\n<b>Rake up</b> and discard any fallen leaves or fruit on a regular basis, and never leave fallen leaves or fruit on the ground over winter. Apple scab fungus overwinters on fallen leaves and fruit.\n<b>Prune</b> your apple and crabapple trees to keep their crowns open so light and air can move through. Dry leaves and fruit help to prevent initial infection.\n<b>Plant</b> your apple and crabapple trees correctly, in full sun and with enough space around each tree, according to their mature size. Shade keeps water from evaporating quickly, and crowded trees are more susceptible to the disease.\n<b>Irrigate</b> your trees in the early morning hours, and don’t use overhead sprays that will wet leaves and fruit. Dry leaves won’t host the fungus.</string>
    <string name="apple_black_rot">\nPrune out dead or diseased branches.\nPick all dried and shriveled fruits remaining on the trees.\nRemove infected plant material from the area.\nAll infected plant parts should be burned, buried or sent to a municipal composting site.\nBe sure to remove the stumps of any apple trees you cut down. Dead stumps can be a source of spores.</string>
    <string name="cedar_apple_rust">Choose resistant cultivars when available.\nRake up and dispose of fallen leaves and other debris from under trees.\nRemove galls from infected junipers. In some cases, juniper plants should be removed entirely.\nApply preventative, disease-fighting fungicides labeled for use on apples weekly, starting with bud break, to protect trees from spores being released by the juniper host. This occurs only once per year, so additional applications after this springtime spread are not necessary.\nOn juniper, rust can be controlled by spraying plants with a copper solution (0.5 to 2.0 oz/ gallon of water) at least four times between late August and late October.</string>
    <string name="cherry_powdery_mildew">Start looking for the first colonies about 1 week after the first irrigation.\nRemove and destroy sucker shoots.\nKeep irrigation water off developing fruit and leaves by using irrigation that does not wet the leaves. Also, keep irrigation sets as short as possible.\nFollow cultural practices that promote good air circulation, such as pruning, and moderate shoot growth through judicious nitrogen management.</string>
    <string name="corn_grey_spot">The most proficient and economical method to reduce yield losses from corn grey leaf spot is by introducing resistant plant varieties\nIn places where leaf spot occur, these crops can ultimately grow and still be resistant to the disease. Although the disease is not completely eliminated and resistant varieties show disease symptoms, at the end of the growing season, the disease is not as effective in reducing crop yield.\nThe amount of initial inoculum will be reduced when a crop other than corn is planted for ≥2 years in that given area; meanwhile proper tillage methods are carried out. Clean plowing and 1-year crop rotation in the absence of corn allows for greater reductions of the disease as well. Note that conventional tilling can reduce disease but can lead to greater soil erosion</string>
    <string name="corn_leaf_blight">Control of this disease is often focused on management and prevention. First, choose corn varieties or hybrids that are resistant or at least have moderate resistance to northern corn leaf blight. When you grow corn, make sure it does not stay wet for long periods of time. The fungus that causes this infection needs between six and 18 hours of leaf wetness to develop. Plant corn with enough space for airflow and water in the morning so leaves can dry throughout the day.</string>
    <string name="grape_black_rot">Infected prunings and mummified berries should be removed, burned, and/or buried in the soil before new growth begins in the spring. In vineyards with susceptible varieties or where black rot was a problem the previous year, early season fungicide sprays should be timed to prevent the earliest infections. Should infections become numerous, protecting against fruit rot is very difficult later in the growing season. Planting resistant varieties is strongly suggested.</string>
    <string name="grape_esca_black_measles">Presently, there are no effective management strategies for measles. Wine grape growers with small vineyards will often have field crews remove infected fruit prior to harvest. Raisins affected by measles will be discarded during harvest or at the packing house, while table grape growers will leave affected fruit on the vine. Current research is focused on protecting pruning wounds from fungal infections to minimize suspect fungi from colonizing fresh wounds.</string>
    <string name="grape_isariopsis_leaf_spot">Fungicides sprayed for other diseases in the season may help to reduce this disease.</string>
    <string name="peach_bacterial_spot" translatable="false">The most vulnerable cultivars are: ‘Autumnglo’ ‘Autumn Lady’ ‘Blake’ ‘Elberta’ ‘Halehaven’ ‘July Elberta’</string>
    <string name="potato_early_blight">Treatment of early blight includes prevention by planting potato varieties that are resistant to the disease; late maturing are more resistant than early maturing varieties.\nAvoid overhead irrigation and allow for sufficient aeration between plants to allow the foliage to dry as quickly as possible. Practice a 2-year crop rotation. That is, do not replant potatoes or other crops in this family for 2 years after a potato crop has been harvested.</string>
    <string name="potato_late_blight">Choose the right variety: Though no tomato varieties are completely immune to late blight, plant breeders are now developing varieties that are resistant to infection by the late blight fungus. So, when its time to decide which varieties to plant, keep an eye out for these.\nPrevent overwintering: Fortunately, the fungus that causes late blight needs living tissue to survive over the winter, so it can not overwinter on tomato cages or supports.\nGive plants space: If possible, avoid planting tomatoes and potatoes where you had them last year. \nAvoid watering from above: Using soaker hoses or drip irrigation keep foliage dry, which makes it more difficult for late blight — and other diseases — to spread. </string>
    <string name="strawberry_leaf_scorch">While leaf scorch on strawberry plants can be frustrating, there are some strategies which home gardeners may employ to help prevent its spread in the garden. The primary means of strawberry leaf scorch control should always be prevention.</string>
    <string name="tomato_bacterial_spot">Using pathogen-free seed and disease-free transplants, when possible, is the best way to avoid bacterial spot on tomato. Avoiding sprinkler irrigation and cull piles near greenhouse or field operations, and rotating with a nonhost crop also helps control the disease.</string>
    <string name="tomato_early_blight">Practice crop rotation by planting tomatoes in a section of the garden that has not been used to grow tomatoes or any other member of the Solanaceae family, such as eggplant, potatoes or peppers, in the last two years.\nRead seed packages or plant labels carefully to select a tomato variety that is resistant to blight.\nStake or cage tomato plants so that foliage grows vertically, off the ground.\nMulch well around plants.</string>
    <string name="tomato_late_blight">Tomato varieties resistant to certain races of the late blight fungus are grown where the disease occurs regularly.\nRemove any nearby volunteer tomato and potato plants and nightshades.\nCheck transplants to ensure they are free of late blight before planting.\nAvoid sprinkler irrigation, if possible, because it favors the development of late blight.</string>
    <string name="tomato_leaf_mold">The pathogen P. fulfa can survive on infected plant debris or in the soil, although the initial source of the disease is often infected seed. The disease is spread by rain and wind, on tools and clothing, and via insect activity.\nHigh relative humidity (greater that 85%) combined with high temperatures encourages the spread of the disease. With that in mind, if growing tomatoes in a greenhouse, maintain night temps higher than outside temperatures.</string>
    <string name="tomato_spetoria_leaf_spot">Removing infected leaves. Remove infected leaves immediately, and be sure to wash your hands and pruners thoroughly before working with uninfected plants.\nConsider organic fungicide options. Fungicides containing either copper or potassium bicarbonate will help prevent the spreading of the disease. Begin spraying as soon as the first symptoms appear and follow the label directions for continued management.</string>
    <string name="tomato_target_spot">Do not plant new crops next to older ones that have the disease.\nPlant as far as possible from papaya, especially if leaves have small angular spots (Photo 5).\nCheck all seedlings in the nursery, and throw away any with leaf spots.Remove a few branches from the lower part of the plants to allow better airflow at the base\nRemove and burn the lower leaves as soon as the disease is seen, especially after the lower fruit trusses have been picked.</string>
    <string name="tomato_yellow_leaf_curl">Rapid and precise tests for Tomato yellow leaf curl virus are available at UC Davis and CDFA. These tests can be carried out in less than 24 hours. Anyone finding tomatoes with TYLC-like symptoms can contact their county farm advisor, Robert L. Gilbertson at UC Davis, or Tongyan Tian at CDFA.</string>
    <string name="tomato_mosaic_virus">Destroy any seedlings that appear stunted or distorted and then decontaminate tools and hands.\nKeep the area around the tomatoes weeded and free of plant detritus to minimize areas the disease can harbor. Control insects as well to lessen the chances of contamination.</string>
    <string name="tomato_spider_mites">If your tomato plants are thirsty, spider mites can move in. Practice a regular watering routine to keep the soil moist, but not waterlogged. They are often found on dusty plants. If possible, water the plants from above to chase away any dust and insects that may have gathered.</string>
    <string name="hide">HIDE</string>
    <string name="welcome_back_kisan_suvidha">Welcome Back ! Kisan Suvidha</string>
    <string name="crop_prediction">Crop Prediction</string>
    <string name="home_data">Home</string>
    <string name="soil_testing_laboratory">Soil Testing Laboratory</string>
    <string name="sell_product">Sell Product</string>
    <string name="disease_detection">Disease Detection</string>
    <string name="organic_manure">Organic Manure</string>
    <string name="government_schemes">Government Schemes</string>
    <string name="farming_products">Farming Products</string>
    <string name="expert_advice">Expert Advice</string>
    <string name="animals">Animals</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="daily_market_price">Daily Market Price</string>
</resources>