<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <LinearLayout
            android:id="@+id/layoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/publicaplay"
                android:letterSpacing="0.06"
                android:text="@string/welcome_back_kisan_suvidha"
                android:textColor="@color/black"
                android:textSize="27sp"
                android:includeFontPadding="false"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_outline_email" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:includeFontPadding="false"
                android:fontFamily="@font/publicaplay"
                android:hint="@string/prompt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:letterSpacing="0.06"
                android:textColor="@color/gblue"
                android:textSize="18sp"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

        <View
            android:id="@+id/emailView"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_300" />

        <RelativeLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/lock"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/app_name"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_outline_lock_24" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_toEndOf="@id/lock"
                android:layout_toStartOf="@id/showTV"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/publicaplay"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:includeFontPadding="false"
                android:letterSpacing="0.06"
                android:textColor="@color/gblue"
                android:layout_marginStart="16dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/showTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SHOW"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center"
                android:textColor="@color/grey_500"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/edit_text_password"
                android:layout_alignTop="@id/edit_text_password"
                android:fontFamily="@font/publicaplay"/>

            <TextView
                android:id="@+id/hideTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide"
                android:visibility="gone"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center"
                android:textColor="@color/grey_500"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/edit_text_password"
                android:layout_alignTop="@id/edit_text_password"
                android:fontFamily="@font/publicaplay"/>


        </RelativeLayout>

        <View
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_300"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Forget Password"
            android:layout_marginEnd="30dp"
            android:padding="8dp"
            android:layout_marginTop="4dp"
            android:id="@+id/forget_password"
            android:textColor="@color/gblue"
            android:fontFamily="@font/publicaplay"
            android:letterSpacing="0.06"
            android:includeFontPadding="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="Login"
            android:layout_gravity="center"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:fontFamily="@font/publicaplay"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:background="@drawable/button_login_riple"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="36dp"
            android:letterSpacing="0.1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textSize="15sp"
                android:padding="4dp"
                android:fontFamily="@font/publicaplay"
                android:letterSpacing="0.06"
                android:textColor="@color/grey_800"
                android:includeFontPadding="false"/>

            <TextView
                android:id="@+id/text_view_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textSize="15sp"
                android:padding="4dp"
                android:letterSpacing="0.06"
                android:fontFamily="@font/publicaplay_bold"
                android:textColor="@color/black"
                android:includeFontPadding="false"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/regProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>