<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:id="@+id/backToLoginBtn"
        android:onClick="backtoLoginPage"
        android:src="@drawable/back_icon"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:padding="10dp"
        android:background="@android:color/transparent"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="Forgot Password"
        android:fontFamily="@font/publicaplay_bold"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textAlignment="center"
        android:letterSpacing="0.05"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/backToLoginBtn"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"/>

    <ScrollView
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fpTxt"
                android:text="@string/forgot_password"
                android:textSize="16sp"
                android:fontFamily="@font/publicaplay"
                android:layout_marginStart="24dp"
                android:letterSpacing="0.02"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/fp"
                android:layout_below="@id/fpTxt"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/fp"/>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_below="@+id/fp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_outline_email" />

                <EditText
                    android:id="@+id/edit_text_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/publicaplay"
                    android:letterSpacing="0.04"
                    android:hint="@string/prompt_email"
                    android:layout_marginStart="16dp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/gblue"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_below="@id/emailLayout"
                android:background="@color/grey_300"/>

            <Button
                android:id="@+id/btn_forgot_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailLayout"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_login_riple"
                android:fontFamily="@font/publicaplay"
                android:includeFontPadding="false"
                android:letterSpacing="0.08"
                android:text="Send Instructions"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>